[gd_scene load_steps=2 format=3 uid="uid://cf24svpp5t6tc"]

[ext_resource type="Script" path="res://Menus/in_game_menu.gd" id="1_0muqk"]

[node name="Node2D" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_0muqk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_top = 10.0
offset_right = -9.0
offset_bottom = 41.0
grow_horizontal = 0
size_flags_horizontal = 8

[node name="ButtonToMenu" type="Button" parent="MarginContainer"]
process_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Menu
"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -101.0
offset_right = 94.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ConfirmationMenu" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 7

[node name="Menu" type="Label" parent="MarginContainer2/ConfirmationMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Меню
"
horizontal_alignment = 1

[node name="Run" type="Button" parent="MarginContainer2/ConfirmationMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Продолжить игру
"

[node name="setting" type="Button" parent="MarginContainer2/ConfirmationMenu"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Настройки
"

[node name="Quit" type="Button" parent="MarginContainer2/ConfirmationMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Выход
"

[connection signal="pressed" from="MarginContainer/ButtonToMenu" to="." method="_on_button_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer2/ConfirmationMenu/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="MarginContainer2/ConfirmationMenu/Quit" to="." method="_on_quit_pressed"]
